# ros2_hydrotest_turusov

src/ros2_hydrotest_turusov_example_1/: CMakeLists.txt  package.xml
src/ros2_hydrotest_turusov_example_2/: package.xml  setup.cfg  setup.py
src/ros2_hydrotest_turusov_example_2/ros2_hydrotest_turusov_example_2/: client_node.py  publisher_node.py  server_node.py  subscriber_node.py
src/ros2_hydrotest_turusov_interfaces/: CMakeLists.txt  package.xml
src/ros2_hydrotest_turusov_interfaces/srv/: CountChar.srv
src/ros2_hydrotest_turusov_launch/: package.xml  setup.cfg  setup.py
